srv-3/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: srv-3
spec:
  selector:
    app: srv-3
  ports:
  - port: 5002
    name: http
