srv-3/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: srv-3
spec:
  hosts:
  - srv-3
  http:
  - route:
    - destination:
        host: srv-3
